--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: danuri-image-backend-ingress
+  name: danuri-backend-ingress
   namespace: danuri
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
@@ -17,7 +17,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: danuri-image-backend
+                name: danuri-backend
                 port:
                   number: 80
   tls:
