--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: danuri-image-backend
+  name: danuri-backend
   namespace: danuri
 spec:
   selector:
-    app: danuri-image-backend
+    app: danuri-backend
   ports:
     - port: 80
       targetPort: 8080
