--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,6 +7,10 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location ~ ^/actuator {
+        return 403;
+      }
 spec:
   ingressClassName: nginx
   rules:
