--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,7 +19,10 @@ spec:
         - name: danuri-backend
           image: ghcr.io/danuri-team/danuri-backend:latest
           ports:
-            - containerPort: 8080
+            - name: http
+              containerPort: 8080
+            - name: monitoring
+              containerPort: 8081
           resources:
             limits:
               cpu: 400m
