feat :: 구문 최신으로 변경

--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -10,5 +10,5 @@ images:
   - name: ghcr.io/danuri-team/danuri-backend
     newTag: v0.0.1
 
-patchesStrategicMerge:
+patches:
   - patch-deployment.yaml
