feat :: path로 지정

--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -11,4 +11,6 @@ images:
     newTag: v0.0.1
 
 patches:
-  - patch-deployment.yaml
+  - path: patch-deployment.yaml
+    target:
+      kind: Deployment
