--- a/overlays/stage/patch-deployment.yaml
+++ b/overlays/stage/patch-deployment.yaml
@@ -6,6 +6,10 @@ spec:
   replicas: 1
   template:
     spec:
+      tolerations:
+        - key: "oci.oraclecloud.com/oke-is-preemptible"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
         - name: danuri-backend
           resources:
