fix :: 시크릿 이름 override

--- a/potato-4-cut/overlays/stage/patch-deployment.yaml
+++ b/potato-4-cut/overlays/stage/patch-deployment.yaml
@@ -16,3 +16,6 @@ spec:
             requests:
               cpu: 100m
               memory: 1024Mi
+          envFrom:
+            - secretRef:
+                name: potato-4-cut-stage
