--- a/potato-4-cut/overlays/production/patch-deployment.yaml
+++ b/potato-4-cut/overlays/production/patch-deployment.yaml
@@ -12,3 +12,6 @@ spec:
             requests:
               cpu: 100m
               memory: 1024Mi
+          envFrom:
+            - secretRef:
+                name: potato-4-cut-prod
