feat :: 네임스페이스 수정

--- a/potato-4-cut/overlays/production/doppler-secret.yaml
+++ b/potato-4-cut/overlays/production/doppler-secret.yaml
@@ -10,6 +10,6 @@ spec:
   project: potato-4-cut
   config: prd
   managedSecret:
-    name: potato-4-cut
+    name: potato-4-cut-prod
     namespace: danuri
     type: Opaque
