--- a/potato-4-cut/overlays/stage/doppler-secret.yaml
+++ b/potato-4-cut/overlays/stage/doppler-secret.yaml
@@ -10,6 +10,6 @@ spec:
   project: potato-4-cut
   config: stg
   managedSecret:
-    name: potato-4-cut
+    name: potato-4-cut-stage
     namespace: danuri
     type: Opaque
