--- a/potato-4-cut/overlays/stage/kustomization.yaml
+++ b/potato-4-cut/overlays/stage/kustomization.yaml
@@ -1,20 +1,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: danuri-stage
+namespace: danuri
 
 resources:
-- ../../base
-- doppler-secret.yaml
+  - ../../base
+  - doppler-secret.yaml
 
 images:
-- name: ghcr.io/danuri-team/potato4cut-v2-backend
-  newTag: latest
+  - name: ghcr.io/danuri-team/potato4cut-v2-backend
+    newTag: latest
 
 patches:
-- path: patch-deployment.yaml
-  target:
-    kind: Deployment
-- path: patch-ingress.yaml
-  target:
-    kind: Ingress
+  - path: patch-deployment.yaml
+    target:
+      kind: Deployment
+  - path: patch-ingress.yaml
+    target:
+      kind: Ingress
