feat :: TLS 시크릿 수정

--- a/potato-4-cut/base/ingress.yaml
+++ b/potato-4-cut/base/ingress.yaml
@@ -23,4 +23,4 @@ spec:
   tls:
     - hosts:
         - potato-4cut-api.mya.ong
-      secretName: potato-4cut-api-tls
+      secretName: danuri-api-tls
