--- a/potato-4-cut/overlays/stage/patch-ingress.yaml
+++ b/potato-4-cut/overlays/stage/patch-ingress.yaml
@@ -23,4 +23,4 @@ spec:
   tls:
     - hosts:
         - stg.potato-4cut-api.mya.ong
-      secretName: potato-api-tls
+      secretName: danuri-api-tls
