fix :: 네임스페이스 분리

--- a/potato-4-cut/overlays/production/doppler-secret.yaml
+++ b/potato-4-cut/overlays/production/doppler-secret.yaml
@@ -11,5 +11,5 @@ spec:
   config: prd
   managedSecret:
     name: potato-4-cut-prod
-    namespace: danuri
+    namespace: danuri-prod
     type: Opaque
