--- a/potato-4-cut/overlays/stage/doppler-secret.yaml
+++ b/potato-4-cut/overlays/stage/doppler-secret.yaml
@@ -11,5 +11,5 @@ spec:
   config: stg
   managedSecret:
     name: potato-4-cut-stage
-    namespace: danuri
+    namespace: danuri-stage
     type: Opaque
