--- a/potato-4-cut/base/ingress.yaml
+++ b/potato-4-cut/base/ingress.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: potato-4-cut-ingress
-  namespace: danuri
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     cert-manager.io/cluster-issuer: letsencrypt-prod
@@ -23,4 +22,4 @@ spec:
   tls:
     - hosts:
         - potato-4cut-api.mya.ong
-      secretName: danuri-api-tls
+      secretName: potato-api-tls
