chore :: 네임스페이스 지정

--- a/potato-4-cut/base/ingress.yaml
+++ b/potato-4-cut/base/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: potato-4-cut-ingress
+  namespace: danuri-prod
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     cert-manager.io/cluster-issuer: letsencrypt-prod
