--- a/potato-4-cut/base/ingress.yaml
+++ b/potato-4-cut/base/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
 spec:
   ingressClassName: nginx
   rules:
