feat :: bmo 환경변수 프로젝트 명 변경

--- a/bmo/bmo-prod.yaml
+++ b/bmo/bmo-prod.yaml
@@ -7,7 +7,7 @@ spec:
   tokenSecret:
     name: bmo-secret
     namespace: doppler-operator-system
-  project: danuri-backend
+  project: bmo
   config: prd
   managedSecret:
     name: bmo-secret
