--- a/potato-4-cut/base/kustomization.yaml
+++ b/potato-4-cut/base/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
-  - ingress.yaml
+  - potato-4cut-prod-route.yaml
   - configmap.yaml
