fix :: 2레벨 서브 도메인 제거

--- a/potato-4-cut/overlays/stage/potato-4cut-stage-route.yaml
+++ b/potato-4-cut/overlays/stage/potato-4cut-stage-route.yaml
@@ -8,7 +8,7 @@ spec:
     - name: istio-gateway
       namespace: istio-system
   hostnames:
-    - "stg.potato-4cut-api.mya.ong"
+    - "stg-potato-4cut-api.mya.ong"
   rules:
     - matches:
         - path:
